Fixed Mobile Spacing

--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,7 @@ html, body {
 	color: var(--fontColor);
 	font-family: 'Silkscreen', sans-serif;
 	background-color: var(--backgroundColor);
+	overflow: hidden auto;
 }
 
 button {
